# image-generator

./: .gitignore  .prettierrc.js  Cargo.toml  Makefile  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: .eslintrc.js  index.html  package.json  postcss.config.js  tailwind.config.js
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/lambda/: Cargo.toml  package.json
apps/lambda/src/: main.rs
apps/web/: index.html  package.json  tsconfig.tsbuildinfo
apps/web/src/: main.tsx
core/: Cargo.toml
core/src/: lib.rs
